Refactor GitHub workflow and Gradle build script for publishing
- Modified the GitHub workflow to trigger on pushes to the master branch and manual dispatches.
- Removed the pull request trigger.
- Added environment variables for Nexus credentials.
- Changed the Gradle task from `publishToMavenLocal` to `publish`.
- Removed the artifact upload step.
- Updated the Gradle build script to publish to GitHub Packages instead of Sonatype OSSRH.
- Adjusted credentials configuration for GitHub Packages.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,14 @@
 name: Build
-
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+  workflow_dispatch:
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    env:
+      NEXUS_USER: ${{ secrets.NEXUS_USER }}
+      NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 17
@@ -22,9 +20,4 @@ jobs:
     - name: Build with Gradle
       run: |
         echo 'org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC' >> gradle.properties
-        ./gradlew publishToMavenLocal
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: mavenlocal-artifact
-        path: ~/.m2
+        ./gradlew publish
