--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,11 @@ subprojects {
             repositories {
                 maven {
                     name 'ossrh'
-                    url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
-                    credentials(PasswordCredentials)
+                    url 'https://maven.pkg.github.com/Mystery00/HiddenApi'
+                    credentials {
+                        username = System.getenv("NEXUS_USER")
+                        password = System.getenv("NEXUS_PASSWORD")
+                    }
                 }
             }
         }
